WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80614
REGRESSION (
r109964
): Assertion failure (!isUndefined()) in Length::getIntValue() when a Dashboard region is specified without offsets
https://bugs.webkit.org/show_bug.cgi?id=80614
Summary
REGRESSION (r109964): Assertion failure (!isUndefined()) in Length::getIntVal...
mitz
Reported
2012-03-08 11:04:24 PST
REGRESSION (
r109964
): Assertion failure (!isUndefined()) in Length::getIntValue() when a Dashboard region is specified without offsets
Attachments
Revert to using zero lengths for unspecified Dashboard region offsets
(3.74 KB, patch)
2012-03-08 11:10 PST
,
mitz
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-03-08 11:10:04 PST
Created
attachment 130856
[details]
Revert to using zero lengths for unspecified Dashboard region offsets
mitz
Comment 2
2012-03-08 11:19:07 PST
Fixed in <
http://trac.webkit.org/r110180
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug