REGRESSION (r109964): Assertion failure (!isUndefined()) in Length::getIntValue() when a Dashboard region is specified without offsets https://bugs.webkit.org/show_bug.cgi?id=80614

Reviewed by Beth Dakin.

Source/WebCore:

Test: fast/css/dashboard-regions-undefined-length-assertion.html

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::collectMatchingRulesForList): Reverted to setting zero lengths,
rather than Undefined ones, in the RenderStyle when offsets are not given.

LayoutTests:

* fast/css/dashboard-regions-undefined-length-assertion-expected.txt: Added.
* fast/css/dashboard-regions-undefined-length-assertion.html: Added.



Canonical link: https://commits.webkit.org/97785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110180 268f45cc-cd09-0410-ab3c-d52691b4dbfc